Fix wrong color code in styles.css

--- a/vr.COMA_SPA/frontend/public/styles.css
+++ b/vr.COMA_SPA/frontend/public/styles.css
@@ -3,7 +3,7 @@
     --header-bg: #2c3e50;
     --main-bg: #ecf0f1;
     --primary-text: #2c3e50;
-    --secondary-text: #8j99a9;
+    --secondary-text: #8f99a9;
     --accent: #3498db;
     --btn-bg: #3498db;
     --btn-text: #ffffff;
